--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,14 @@ plugins {
 }
 
 android {
+    signingConfigs {
+        release {
+            storeFile file('/Users/emmanuelpacheco/Desktop/PokeMontersRelease.keystore')
+            storePassword 'Emma3103'
+            keyPassword 'Emma3103'
+            keyAlias 'PokeMontersDalvik'
+        }
+    }
     compileSdk 32
 
     defaultConfig {
@@ -21,7 +29,9 @@ android {
 
     buildTypes {
         release {
+            signingConfig signingConfigs.release
             minifyEnabled false
+            debuggable false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
