--- a/data/config
+++ b/data/config
@@ -5,6 +5,22 @@
     "count": 0,
     "limit": 0,
     "offset": 0,
-    "addAllTabs": true
+  }
+}
+
+
+{
+  "code": "1",
+  "data": {
+    "total": 0,
+    "count": 0,
+    "limit": 0,
+    "offset": 0,
+    "results": [
+  
+    {
+         "addAllTabs": true
+      }
+    ]
   }
 }
