--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,14 +8,17 @@ plugins {
 
 android {
 
-    compileSdk 34
+    compileSdk 36
 
     defaultConfig {
         applicationId "com.dalvik.pokemonsters"
+
+        namespace 'com.dalvik.pokemonsters'
+
         minSdk 23
-        targetSdk 34
-        versionCode 13
-        versionName "1.1.2"
+        targetSdk 36
+        versionCode 14
+        versionName "1.1.3"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -45,7 +48,9 @@ android {
     buildFeatures {
         viewBinding true
         dataBinding true
+        buildConfig = true // <- set this to true
     }
+
     namespace 'com.dalvik.pokemonsters'
 }
 
